--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- google fonts  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>Cosmo Junkie</title>
 </head>
@@ -43,7 +40,7 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo consequat.
             </p>
-            <a href="#portfolio">
+            <a class="button" href="#portfolio">
                 view my work
             </a>
         </div>
@@ -122,7 +119,7 @@
             <textarea name="" id="" placeholder="your message">
 
             </textarea>
-            <input type="button" value="send flare">
+            <input type="button" value="send flare" class="button">
         </form>
     </section>
     <footer class="">
