--- a/index.html
+++ b/index.html
@@ -9,127 +9,151 @@
     <title>Cosmo Junkie</title>
 </head>
 <body>
-    <nav class="grid">
-        <h1>
-            cosmo junkie
-        </h1>
-        <ul>
-            <li>
-                <a href="#portfolio">
-                portfolio
-            </a>
-        </li>
-            <li>
-                <a href="#skills">
-                skills
-            </a>
-        </li>
-            <li>
-                <a href="#contact">
-                contact
-            </a>
-        
-        </li>
-        </ul>
-    </nav>
-    <section class="landing grid">
-        <div class="landing-text">
-            <h2>
-                space enthusiast &#38; JavaSkript developer
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In commodo consequat.
-            </p>
-            <a class="button" href="#portfolio">
-                view my work
-            </a>
+    <!-- Start Nav Section  -->
+   <nav >
+        <div class="container grid">
+            <h1>
+                cosmo junkie
+            </h1>
+            <ul>
+                <li>
+                    <a href="#portfolio">
+                        portfolio
+                    </a>
+                </li>
+                <li>
+                    <a href="#skills">
+                        skills
+                    </a>
+                </li>
+                <li>
+                    <a href="#contact">
+                        contact
+                    </a>
+                </li>
+            </ul>
         </div>
-        <img src="Assits/banner_image.png" alt="">
-    </section>
-    <section class="portfolio " id="portfolio">
-        <h3>
-            some of my project
-        </h3>
-        <div class="project grid">
-            <div class="box">
-                <img src="Assits/project_1.png" alt="">
-                <h4>
-                    space race game
-                </h4>
+   </nav>
+    <!-- End Nav Section  -->
+     <!-- Start Landing Section  -->
+   <section class="landing">
+       <div class="container grid">
+            <div class="landing-text">
+                <h2>
+                    space enthusiast &#38; JavaScript developer
+                </h2>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates tempora.
+                </p>
+                <a href="#portfolio" class="button">
+                    view my work
+                </a>
             </div>
-            <div class="box">
-                <img src="assits/project_2.png" alt="">
-                <h4>
-                    planet boy <span>api</span>
-                </h4>
+            <div class="image">
+                <img src="Assits/banner_image.png" alt="">
             </div>
-            <div class="box">
-                <img src="assits/project_3.png" alt="">
-                <h4>
-                    captain cosmo blog
-                </h4>
+       </div>
+   </section>
+   <!-- End Landing Section  -->
+    <!-- Start Portfolio Section  -->
+   <section class="portfolio" id="portfolio">
+        <div class="container">
+            <h3>
+                some of my projects
+            </h3>
+            <div class="portfolio-cont grid">
+                <div class="box">
+                    <div class="image">
+                        <img src="Assits/project_1.png" alt="">
+                    </div>
+                    <h4>
+                        space race game
+                    </h4>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="Assits/project_2.png" alt="">
+                    </div>
+                    <h4>
+                        planet boy API
+                    </h4>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="Assits/project_3.png" alt="">
+                    </div>
+                    <h4>
+                        captian cosmo blog
+                    </h4>
+                </div>
             </div>
         </div>
-        
-    </section>
+   </section>
+    <!-- End Portfolio Section  -->
+    <!-- Start Skills Section  -->
     <section class="skills" id="skills">
-        <h3>things i can do</h3>
-        <ul class="grid">
-            <li>
-                <img src="assits/comet_1.svg" alt="">
-                <h4>
-                    JavaSkript
-                </h4>
-            </li>
-            <li>
-                <img src="assits/comet_2.svg" alt="">
-                <h4>
-                    react
-                </h4>
-            </li>
-            <li>
-                <img src="assits/comet_3.svg" alt="">
-                <h4>
-                    firebase
-                </h4>
-            </li>
-            <li>
-                <img src="assits/comet_4.svg" alt="">
-                <h4>
-                    flutter
-                </h4>
-            </li>
-        </ul>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fringilla lacus diam. Mauris fringilla consectetur nibh,
-            sit amet tempus augue.
-        </p>
-    </section>
-    <section class="contact " id="contact">
-        <h3>
-            get in touch
-        </h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur.
-        </p>
-        <form action="">
-            <input type="text" name="" id="" placeholder="name" required>
-            <input type="email" name="" id="" placeholder="email" required>
-
-            <textarea name="" id="" placeholder="your message">
-
-            </textarea>
-            <input type="button" value="send flare" class="button">
-        </form>
-    </section>
-    <footer class="">
-        <p>
-            copyright 2025 cosmo junkie
-        </p>
-        <div class="icon">
-            <img src="/Assits/icon_fb.svg" alt="">
-            <img src="Assits/icon_tw.svg" alt="">
+        <div class="container">
+            <h3>
+                thinks i can do
+            </h3>
+            <div class="skills-cont grid">
+                <div class="box">
+                    <img src="Assits/comet_1.svg" alt="">
+                    <h4>
+                        JavaScript
+                    </h4>
+                </div><div class="box">
+                    <img src="Assits/comet_2.svg" alt="">
+                    <h4>
+                        react
+                    </h4>
+                </div><div class="box">
+                    <img src="Assits/comet_3.svg" alt="">
+                    <h4>
+                        firebase
+                    </h4>
+                </div><div class="box">
+                    <img src="Assits/comet_4.svg" alt="">
+                    <h4>
+                        flutter
+                    </h4>
+                </div>
+            </div>
         </div>
-    </footer>
+    </section>
+    <!-- End Skills Section  -->
+    <!-- Start Contact Section  -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="contact-text">
+                <h3>
+                    get in touch
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur.
+                </p>
+            </div>
+            <form action="">
+                <input type="text" name="" id="" placeholder="name">
+                <input type="email" name="" id="" placeholder="email">
+                <textarea name="" id="" placeholder="your message"></textarea>
+                <input type="button" value="send flare" class="button">
+            </form>
+        </div>
+    </section>
+    <!-- End Contact Section  -->
+     <!-- Start Fotter  -->
+      <footer>
+        <div class="container grid">
+            <p>
+                &#169; copyright 2025 cosmo junkie
+            </p>
+            <div class="icon">
+                <img src="Assits/icon_fb.svg" alt="">
+                <img src="Assits/icon_tw.svg" alt="">
+            </div>
+        </div>
+      </footer>
+     <!-- End Fotter  -->
 </body>
 </html>
